ajout nouveau background

--- a/config.tex
+++ b/config.tex
@@ -4,7 +4,7 @@
 \def\Color{blueCustom}
 
 % Image de fond de la page de titre (chemin relatif à partir de start.tex) %
-\def\fondPageDeGardeChemin{assets/img/background.png}
+\def\fondPageDeGardeChemin{assets/img/background/bg1-blue.png}
 
 % Image en-tête des pages (chemin relatif à partir de start.tex) %
 \def\ImageEnTetePages{assets/img/img_right.png}
